# py-auth

./: .gitignore  Makefile  README.md  docker-compose.yml  prd.md  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  README.md  alembic.ini  envs.toml  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 8b142695934d_create_initial_tables.py  d977fe0d19f1_make_datetime_columns_timezone_aware.py
backend/app/: main.py  seed.py
backend/app/articles/: models.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  security.py
backend/app/users/: router.py
docs/: authentication.md  database-connection.md  permissions.md
