[tool.poetry]
name = "py-auth"
version = "0.1.0"
description = ""
authors = ["msr <msrxse@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.129.0,<0.130.0"
uvicorn = {extras = ["standard"], version = ">=0.41.0,<0.42.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.46,<3.0.0"}
asyncpg = ">=0.31.0,<0.32.0"
pydantic-settings = ">=2.13.1,<3.0.0"
alembic = ">=1.18.4,<2.0.0"
pwdlib = {extras = ["argon2"], version = ">=0.3.0,<0.4.0"}
pyjwt = ">=2.11.0,<3.0.0"
email-validator = ">=2.3.0,<3.0.0"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
